deploy/k8s/03_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prw-svc
spec:
  selector:
    app: prw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
