deploy/k8s/04_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prw-ingress
spec:
  rules:
  - http:
      paths:
      - path: /webhook
        backend:
          serviceName: prw-svc
          servicePort: 80
      - path: /logs
        backend:
          serviceName: prw-svc
          servicePort: 80
